# remotely-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SKILL.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: install.js
src/: cli.rs  credentials.rs  crypto.rs  error.rs  lib.rs  main.rs  ssh.rs  telnet.rs
src/commands/: add.rs  edit.rs  exec.rs  init.rs  install_skill.rs  list.rs  mod.rs  remove.rs  test.rs
