[package]
name = "remotely-cli"
version = "0.1.0"
edition = "2021"
description = "Secure remote device management CLI for AI agents"
license = "MIT"
authors = ["Antigravity"]

[[bin]]
name = "remotely"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
base64 = "0.22"
dirs = "5.0"
rpassword = "7.3"
comfy-table = "7.1"
anyhow = "1.0"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
